[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/main_menu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://fonts/luckiest-guy/LuckiestGuy.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://fonts/KarmaFuture.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 200
extra_spacing_top = 19
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 35
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 38
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 35
font_data = ExtResource( 3 )

[node name="MainMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 21

[node name="GameTitle" type="Label" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 220.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.364706, 0.721569, 0.0431373, 1 )
text = "AMAZING"
align = 1
valign = 1

[node name="StartSandbox" type="Button" parent="VBoxContainer"]
margin_left = 431.0
margin_top = 241.0
margin_right = 593.0
margin_bottom = 293.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.760784, 0.913725, 0.0196078, 1 )
text = "Sandbox"

[node name="StartMultiplayer" type="Button" parent="VBoxContainer"]
margin_left = 392.0
margin_top = 314.0
margin_right = 632.0
margin_bottom = 370.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.760784, 0.913725, 0.0196078, 1 )
text = "Multiplayer"

[node name="QuitGame" type="Button" parent="VBoxContainer"]
margin_left = 467.0
margin_top = 391.0
margin_right = 556.0
margin_bottom = 443.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.760784, 0.913725, 0.0196078, 1 )
text = "Quit"
[connection signal="pressed" from="VBoxContainer/StartSandbox" to="." method="_on_StartSandbox_pressed"]
[connection signal="pressed" from="VBoxContainer/StartMultiplayer" to="." method="_on_StartMultiplayer_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitGame" to="." method="_on_QuitGame_pressed"]
